<resources>
    <string name="app_name">Motivational</string>
    <string name="text_new_phrase">Nova Frase</string>
    <string name="text_welcome">Olá, forasteiro!</string>
    <string name="text_motivational_phrase">Frase motivacional do dia!</string>
    <string name="lets_start">Vamos começar?</string>
    <string name="whats_your_name">Qual o seu nome?</string>
    <string name="button_save_username">Salvar</string>
</resources>