<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    android:padding="16dp"
    tools:context=".UserActivity">

    <TextView
        android:id="@+id/text_lets_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/cabin"
        android:padding="8dp"
        android:text="@string/lets_start"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_centerInParent="true"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:hint="@string/whats_your_name"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColorHint="@color/white"
        android:textSize="22sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/purple_200"
        android:fontFamily="@font/cabin"
        android:text="@string/button_save_username"
        android:textAllCaps="true" />

</RelativeLayout>