<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:padding="8dp">

        <ImageView
            android:id="@+id/ic_all_inclusive"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="TODO"
            android:src="@drawable/ic_all_inclusive" />

        <ImageView
            android:id="@+id/ic_happy_emoji"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="TODO"
            android:src="@drawable/ic_happy_emoji" />

        <ImageView
            android:id="@+id/ic_sunny"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="TODO"
            android:src="@drawable/ic_sunny" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/cabin"
        android:text="@string/text_welcome"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_motivational_phrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/text_motivational_phrase"
        android:textSize="16sp" />

    <View
        android:layout_width="128dp"
        android:layout_height="5dp"
        android:layout_below="@+id/text_motivational_phrase"
        android:layout_centerHorizontal="true"
        android:background="@color/purple_500" />

    <Button
        android:id="@+id/button_new_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/cabin"
        android:text="@string/text_new_phrase"
        android:textAllCaps="true" />
</RelativeLayout>